# cardops

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CardOps-Launcher.cmd  DECISIONS.md  README.md  TASKS.md  alembic.ini  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  pages.yml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_settings_runtime_controls.py  (+2 more)
apps/api/cardops_api/: __init__.py  audit.py  card_analysis.py  card_service.py  config.py  database.py  demo.py  ebay_oauth.py  ebay_service.py  filesystem_service.py  image_service.py  job_service.py  logging_config.py  main.py  models.py  providers.py  routes.py  schemas.py  settings_service.py
apps/web/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web/e2e/: dashboard.spec.ts
apps/web/src/: App.test.tsx  App.tsx  api.ts  main.tsx  styles.css  types.ts
apps/worker/cardops_worker/: __init__.py  main.py
docs/: ARCHITECTURE.md  IMPLEMENTATION_REPORT.md  LAUNCHER.md
ebay/callback/: index.html
public/: index.html
public/ebay/about/: index.html
public/ebay/callback/: index.html
public/ebay/privacy_&_TOS/: index.html
scripts/: build.ps1  dev.ps1  doctor.ps1  fix.bat  fix.ps1  oauth_debug.js  reset-demo.ps1  setup.ps1  test.ps1
tests/api/: conftest.py  test_card_analysis.py  test_cards.py  test_directory_scan.py  test_ebay_oauth.py  test_health.py  test_settings.py
tools/: CardOps-Launcher.ps1  CardOpsLauncher.cs
(+9 files in other folders)
