[project]
name = "cardops-ai"
version = "0.1.0"
description = "Local-first sports card inventory, image ingestion, listing audit, and eBay operations platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "pillow>=10.4.0",
    "pydantic>=2.8.2",
    "python-multipart>=0.0.9",
    "rich>=13.7.1",
    "sqlalchemy>=2.0.32",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests/api"]
pythonpath = ["apps/api", "apps/worker", "packages/schemas/python"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]
